--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="shortcut icon" href="icono/favicon.ico">
 </head>
 <body>
+	<h1>La Bandera</h1>
 	<div class="yellow pd15 pdt5">
 		<p>Laboratoria</p>
 	</div>
